--- a/Yelp/Base.lproj/Main.storyboard
+++ b/Yelp/Base.lproj/Main.storyboard
@@ -156,70 +156,53 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="124" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="tCH-vO-yMB">
-                                <rect key="frame" x="0.0" y="94" width="600" height="442"/>
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="SwitchCell" rowHeight="124" id="Bd6-cE-C1I" customClass="SwitchCell" customModule="Yelp" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="92" width="600" height="124"/>
+                                        <rect key="frame" x="0.0" y="28" width="600" height="124"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Bd6-cE-C1I" id="eFD-Ns-1i7">
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="123.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="African" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hCB-7p-R6z">
-                                                    <rect key="frame" x="23" y="51" width="55" height="21"/>
+                                                    <rect key="frame" x="23" y="52" width="55" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Azj-NP-TTi">
-                                                    <rect key="frame" x="528" y="46" width="51" height="31"/>
-                                                </switch>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8lu-hr-rX8">
+                                                    <rect key="frame" x="562" y="47" width="30" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="30" id="1Dc-EB-gU9"/>
+                                                        <constraint firstAttribute="height" constant="30" id="I9D-ua-BKA"/>
+                                                    </constraints>
+                                                </imageView>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="hCB-7p-R6z" firstAttribute="leading" secondItem="eFD-Ns-1i7" secondAttribute="leadingMargin" constant="15" id="2Mu-nQ-sKX"/>
+                                                <constraint firstItem="8lu-hr-rX8" firstAttribute="top" relation="greaterThanOrEqual" secondItem="eFD-Ns-1i7" secondAttribute="topMargin" constant="3" id="2ix-Lr-DpO"/>
                                                 <constraint firstItem="hCB-7p-R6z" firstAttribute="centerY" secondItem="eFD-Ns-1i7" secondAttribute="centerY" id="9eR-S9-WNg"/>
+                                                <constraint firstItem="8lu-hr-rX8" firstAttribute="trailing" secondItem="eFD-Ns-1i7" secondAttribute="trailingMargin" id="IDN-8Z-x5L"/>
+                                                <constraint firstItem="hCB-7p-R6z" firstAttribute="centerY" secondItem="8lu-hr-rX8" secondAttribute="centerY" id="JJW-P6-yz7"/>
                                                 <constraint firstItem="hCB-7p-R6z" firstAttribute="top" relation="greaterThanOrEqual" secondItem="eFD-Ns-1i7" secondAttribute="topMargin" constant="3" id="LPu-15-yQt"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="Azj-NP-TTi" secondAttribute="trailing" constant="15" id="X5d-4j-0g1"/>
-                                                <constraint firstItem="Azj-NP-TTi" firstAttribute="centerY" secondItem="eFD-Ns-1i7" secondAttribute="centerY" id="yzk-IH-Ge9"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <outlet property="onSwitch" destination="Azj-NP-TTi" id="0xD-Lq-QOw"/>
+                                            <outlet property="switchImageView" destination="8lu-hr-rX8" id="BMa-SQ-wVA"/>
                                             <outlet property="switchLabel" destination="hCB-7p-R6z" id="JRf-Nv-VF9"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
-                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="oFt-8N-5rJ">
-                                <rect key="frame" x="531" y="10" width="51" height="31"/>
-                            </switch>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" text="Offering a deal" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4V8-hC-GkL">
-                                <rect key="frame" x="20" y="15" width="121" height="21"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Category" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5um-L2-fob">
-                                <rect key="frame" x="20" y="65" width="71" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="4V8-hC-GkL" firstAttribute="centerY" secondItem="oFt-8N-5rJ" secondAttribute="centerY" id="2IM-pP-obo"/>
-                            <constraint firstItem="oFt-8N-5rJ" firstAttribute="trailing" secondItem="T9u-3Y-Bhl" secondAttribute="trailingMargin" id="81O-Rk-PVp"/>
-                            <constraint firstItem="4V8-hC-GkL" firstAttribute="leading" secondItem="T9u-3Y-Bhl" secondAttribute="leadingMargin" id="8on-vP-Xm9"/>
                             <constraint firstAttribute="trailing" secondItem="tCH-vO-yMB" secondAttribute="trailing" id="DTh-pe-u13"/>
-                            <constraint firstItem="5um-L2-fob" firstAttribute="leading" secondItem="T9u-3Y-Bhl" secondAttribute="leadingMargin" id="V9C-xI-IvO"/>
                             <constraint firstItem="3nq-Dj-oeW" firstAttribute="top" secondItem="tCH-vO-yMB" secondAttribute="bottom" id="WeN-c9-eMn"/>
-                            <constraint firstItem="4V8-hC-GkL" firstAttribute="top" secondItem="KOX-5w-dfP" secondAttribute="bottom" constant="15" id="jVt-5l-5cP"/>
-                            <constraint firstItem="tCH-vO-yMB" firstAttribute="top" secondItem="5um-L2-fob" secondAttribute="bottom" constant="8" id="jgD-5A-5p5"/>
+                            <constraint firstItem="tCH-vO-yMB" firstAttribute="top" secondItem="KOX-5w-dfP" secondAttribute="bottom" id="bOQ-mg-pKR"/>
                             <constraint firstItem="tCH-vO-yMB" firstAttribute="leading" secondItem="T9u-3Y-Bhl" secondAttribute="leading" id="teA-4d-Syh"/>
-                            <constraint firstItem="5um-L2-fob" firstAttribute="top" secondItem="4V8-hC-GkL" secondAttribute="bottom" constant="30" id="vEE-MO-nP9"/>
-                            <constraint firstItem="oFt-8N-5rJ" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="4V8-hC-GkL" secondAttribute="trailing" constant="10" id="wSJ-zz-A6c"/>
                         </constraints>
                     </view>
                     <extendedEdge key="edgesForExtendedLayout" bottom="YES"/>
