--- a/Yelp/Base.lproj/Main.storyboard
+++ b/Yelp/Base.lproj/Main.storyboard
@@ -155,7 +155,7 @@
                         <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="124" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="tCH-vO-yMB">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" showsSelectionImmediatelyOnTouchBegin="NO" rowHeight="124" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="tCH-vO-yMB">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
@@ -166,27 +166,27 @@
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="123.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8lu-hr-rX8">
+                                                    <rect key="frame" x="567" y="49" width="25" height="25"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="25" id="1Dc-EB-gU9"/>
+                                                        <constraint firstAttribute="height" constant="25" id="I9D-ua-BKA"/>
+                                                    </constraints>
+                                                </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="African" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hCB-7p-R6z">
-                                                    <rect key="frame" x="23" y="52" width="55" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <rect key="frame" x="8" y="53" width="49" height="18"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8lu-hr-rX8">
-                                                    <rect key="frame" x="562" y="47" width="30" height="30"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="width" constant="30" id="1Dc-EB-gU9"/>
-                                                        <constraint firstAttribute="height" constant="30" id="I9D-ua-BKA"/>
-                                                    </constraints>
-                                                </imageView>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="hCB-7p-R6z" firstAttribute="leading" secondItem="eFD-Ns-1i7" secondAttribute="leadingMargin" constant="15" id="2Mu-nQ-sKX"/>
-                                                <constraint firstItem="8lu-hr-rX8" firstAttribute="top" relation="greaterThanOrEqual" secondItem="eFD-Ns-1i7" secondAttribute="topMargin" constant="3" id="2ix-Lr-DpO"/>
+                                                <constraint firstItem="hCB-7p-R6z" firstAttribute="leading" secondItem="eFD-Ns-1i7" secondAttribute="leadingMargin" id="2Mu-nQ-sKX"/>
+                                                <constraint firstItem="8lu-hr-rX8" firstAttribute="top" relation="greaterThanOrEqual" secondItem="eFD-Ns-1i7" secondAttribute="topMargin" constant="1" id="2ix-Lr-DpO"/>
                                                 <constraint firstItem="hCB-7p-R6z" firstAttribute="centerY" secondItem="eFD-Ns-1i7" secondAttribute="centerY" id="9eR-S9-WNg"/>
                                                 <constraint firstItem="8lu-hr-rX8" firstAttribute="trailing" secondItem="eFD-Ns-1i7" secondAttribute="trailingMargin" id="IDN-8Z-x5L"/>
                                                 <constraint firstItem="hCB-7p-R6z" firstAttribute="centerY" secondItem="8lu-hr-rX8" secondAttribute="centerY" id="JJW-P6-yz7"/>
-                                                <constraint firstItem="hCB-7p-R6z" firstAttribute="top" relation="greaterThanOrEqual" secondItem="eFD-Ns-1i7" secondAttribute="topMargin" constant="3" id="LPu-15-yQt"/>
+                                                <constraint firstItem="hCB-7p-R6z" firstAttribute="top" relation="greaterThanOrEqual" secondItem="eFD-Ns-1i7" secondAttribute="topMargin" constant="1" id="LPu-15-yQt"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
