--- a/Yelp/Base.lproj/Main.storyboard
+++ b/Yelp/Base.lproj/Main.storyboard
@@ -26,7 +26,7 @@
                                         <rect key="frame" x="0.0" y="92" width="600" height="89"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="E9J-mU-0E1" id="kB0-PM-hjr">
-                                            <rect key="frame" x="0.0" y="0.0" width="600" height="89"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="88.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1x4-bp-XKj">
@@ -47,25 +47,25 @@
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" text="1. Gran Pu Bah" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LM2-KG-ScY">
-                                                    <rect key="frame" x="81" y="8" width="100" height="17"/>
+                                                    <rect key="frame" x="81" y="8" width="99.5" height="17"/>
                                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="469 Reviews" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ydd-Lk-hsQ">
-                                                    <rect key="frame" x="172" y="28" width="73" height="15"/>
+                                                    <rect key="frame" x="172" y="28" width="73" height="14.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                     <color key="textColor" red="0.53058862433862441" green="0.53058862433862441" blue="0.53058862433862441" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="88 Division St, Mission Bay" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NOo-5I-jeU">
-                                                    <rect key="frame" x="81" y="45" width="153" height="15"/>
+                                                    <rect key="frame" x="81" y="45" width="153" height="14.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0.07 mi" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Roj-fz-Bke">
-                                                    <rect key="frame" x="551" y="8" width="42" height="15"/>
+                                                    <rect key="frame" x="550" y="8" width="41.5" height="14.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                     <color key="textColor" red="0.53058862433862441" green="0.53058862433862441" blue="0.53058862433862441" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
@@ -77,11 +77,18 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Thai, Seafood, Salad" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hvv-sV-hdC">
-                                                    <rect key="frame" x="81" y="59" width="117" height="15"/>
+                                                    <rect key="frame" x="81" y="59" width="116.5" height="14.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                     <color key="textColor" red="0.53058862433862441" green="0.53058862433862441" blue="0.53058862433862441" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Deals" translatesAutoresizingMaskIntoConstraints="NO" id="Clw-cE-1ek">
+                                                    <rect key="frame" x="577" y="45" width="15" height="15"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="15" id="1CA-gj-iy2"/>
+                                                        <constraint firstAttribute="height" constant="15" id="FY2-I4-9hb"/>
+                                                    </constraints>
+                                                </imageView>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="Roj-fz-Bke" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="LM2-KG-ScY" secondAttribute="trailing" constant="5" id="3QG-mh-gBl"/>
@@ -90,16 +97,18 @@
                                                 <constraint firstItem="1x4-bp-XKj" firstAttribute="top" secondItem="kB0-PM-hjr" secondAttribute="topMargin" id="Go6-ru-HTV"/>
                                                 <constraint firstItem="NOo-5I-jeU" firstAttribute="leading" secondItem="1x4-bp-XKj" secondAttribute="trailing" constant="8" id="Mhn-zf-eph"/>
                                                 <constraint firstItem="Roj-fz-Bke" firstAttribute="top" secondItem="kB0-PM-hjr" secondAttribute="topMargin" id="Oth-8N-ySM"/>
+                                                <constraint firstItem="Clw-cE-1ek" firstAttribute="centerY" secondItem="NOo-5I-jeU" secondAttribute="centerY" id="PKI-ML-Nin"/>
                                                 <constraint firstItem="LM2-KG-ScY" firstAttribute="top" secondItem="kB0-PM-hjr" secondAttribute="topMargin" id="UoC-1p-sJk"/>
+                                                <constraint firstItem="Clw-cE-1ek" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="NOo-5I-jeU" secondAttribute="trailing" constant="10" id="XmZ-Kh-CSU"/>
                                                 <constraint firstItem="ydd-Lk-hsQ" firstAttribute="centerY" secondItem="Ee3-ue-4uB" secondAttribute="centerY" id="Y4T-5a-g9h"/>
                                                 <constraint firstItem="Ee3-ue-4uB" firstAttribute="top" secondItem="LM2-KG-ScY" secondAttribute="bottom" constant="3" id="anv-9C-FNO"/>
                                                 <constraint firstItem="LM2-KG-ScY" firstAttribute="leading" secondItem="1x4-bp-XKj" secondAttribute="trailing" constant="7.5" id="bzo-7T-qW7"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="Clw-cE-1ek" secondAttribute="trailing" id="dPh-kF-WXl"/>
                                                 <constraint firstItem="7Oz-5s-FIa" firstAttribute="centerY" secondItem="ydd-Lk-hsQ" secondAttribute="centerY" id="efb-NN-VyD"/>
                                                 <constraint firstAttribute="bottomMargin" relation="greaterThanOrEqual" secondItem="1x4-bp-XKj" secondAttribute="bottom" constant="5" id="fmY-Kf-EaG"/>
                                                 <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="Hvv-sV-hdC" secondAttribute="trailing" constant="10" id="gED-Km-4RJ"/>
                                                 <constraint firstItem="Hvv-sV-hdC" firstAttribute="top" secondItem="NOo-5I-jeU" secondAttribute="bottom" id="hHx-77-Wh2"/>
                                                 <constraint firstItem="7Oz-5s-FIa" firstAttribute="trailing" secondItem="kB0-PM-hjr" secondAttribute="trailingMargin" id="nUl-07-W2C"/>
-                                                <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="NOo-5I-jeU" secondAttribute="trailing" constant="10" id="p9n-Bz-ZeZ"/>
                                                 <constraint firstItem="Ee3-ue-4uB" firstAttribute="leading" secondItem="1x4-bp-XKj" secondAttribute="trailing" constant="8" id="qPh-L6-ETz"/>
                                                 <constraint firstItem="Roj-fz-Bke" firstAttribute="trailing" secondItem="kB0-PM-hjr" secondAttribute="trailingMargin" id="sOk-0K-W5K"/>
                                                 <constraint firstItem="1x4-bp-XKj" firstAttribute="leading" secondItem="kB0-PM-hjr" secondAttribute="leadingMargin" id="w9h-ug-6Iv"/>
@@ -111,6 +120,7 @@
                                             <outlet property="addressLabel" destination="NOo-5I-jeU" id="1hp-fO-HM7"/>
                                             <outlet property="businessNameLabel" destination="LM2-KG-ScY" id="Cy9-HZ-f4p"/>
                                             <outlet property="cuisinesLabel" destination="Hvv-sV-hdC" id="clI-9g-OI2"/>
+                                            <outlet property="dealsImageView" destination="Clw-cE-1ek" id="4iZ-lB-bF3"/>
                                             <outlet property="distanceLabel" destination="Roj-fz-Bke" id="Dem-nn-t7i"/>
                                             <outlet property="ratingImageView" destination="Ee3-ue-4uB" id="UYh-iT-tLr"/>
                                             <outlet property="reviewsLabel" destination="ydd-Lk-hsQ" id="WoJ-Q0-7mE"/>
@@ -263,4 +273,7 @@
             <point key="canvasLocation" x="3539" y="-116"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Deals" width="16" height="16"/>
+    </resources>
 </document>
