--- a/Yelp/Base.lproj/Main.storyboard
+++ b/Yelp/Base.lproj/Main.storyboard
@@ -186,7 +186,7 @@
                         <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" showsSelectionImmediatelyOnTouchBegin="NO" rowHeight="124" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="tCH-vO-yMB">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" showsSelectionImmediatelyOnTouchBegin="NO" rowHeight="124" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="tCH-vO-yMB">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
                                 <color key="backgroundColor" red="0.94669725529100535" green="0.94669725529100535" blue="0.94669725529100535" alpha="1" colorSpace="calibratedRGB"/>
                                 <color key="sectionIndexBackgroundColor" red="0.94669725529100535" green="0.92701723703371108" blue="0.91815848414064782" alpha="1" colorSpace="calibratedRGB"/>
@@ -226,6 +226,34 @@
                                             <outlet property="switchImageView" destination="8lu-hr-rX8" id="BMa-SQ-wVA"/>
                                             <outlet property="switchLabel" destination="hCB-7p-R6z" id="JRf-Nv-VF9"/>
                                         </connections>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ShowMoreCell" rowHeight="59" id="Cdd-Dt-YZa" customClass="ShowMoreCell" customModule="Yelp">
+                                        <rect key="frame" x="0.0" y="152" width="600" height="59"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Cdd-Dt-YZa" id="mHB-74-cLk">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="59"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qMN-Dt-VWc">
+                                                    <rect key="frame" x="0.0" y="15" width="600" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="30" id="4n3-o5-uwd"/>
+                                                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="kk6-Wq-RHT"/>
+                                                    </constraints>
+                                                    <state key="normal" title="Show More">
+                                                        <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                                    </state>
+                                                    <connections>
+                                                        <action selector="onShowMoreButtonTap:" destination="Cdd-Dt-YZa" eventType="touchUpInside" id="tjR-OS-fg2"/>
+                                                    </connections>
+                                                </button>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="qMN-Dt-VWc" secondAttribute="trailing" id="1bW-jF-kre"/>
+                                                <constraint firstItem="qMN-Dt-VWc" firstAttribute="leading" secondItem="mHB-74-cLk" secondAttribute="leading" id="TKh-wD-K8Z"/>
+                                                <constraint firstItem="qMN-Dt-VWc" firstAttribute="centerY" secondItem="mHB-74-cLk" secondAttribute="centerY" id="U1p-Nh-T66"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
